Fixed results text showing scroll bar in wrong position

--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ footer {
   height: 225px;
   overflow: auto;
   word-wrap: break-word;
+  width: inherit;
 }
 
 .result-card p {
